# the-educo-project

./: Pipfile  manage.py  package.json  pyproject.toml  requirements.txt
challenge/: models.py
challenge/migrations/: 0001_initial.py
chatroom/: models.py
chatroom/migrations/: 0001_initial.py
discussion/: models.py
discussion/migrations/: 0001_initial.py
educo/: asgi.py  settings.py  urls.py  wsgi.py
educo/settings/: __init__.py  base.py  local.py  production.py
educo/wsgi/: local.py  production.py
feature/: apps.py  models.py
feature/migrations/: 0001_initial.py
feed/: models.py
feed/migrations/: 0001_initial.py
quiz/: models.py
quiz/migrations/: 0001_initial.py
user_profile/: models.py
user_profile/migrations/: 0001_initial.py
utils/: model_mixins.py
