[tool.poetry]
name = "the-educo-project"
version = "0.1.0"
description = ""
authors = ["Frank Owusu Boakye <oboy.nitro1@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-frontier = "^0.5.3"
django-reactor = "^2.2.1-beta.0"
django-allauth = "^0.44.0"
Pillow = "^8.2.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
